--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,12 +1,54 @@
+{% autoescape false %}
 <!DOCTYPE html>
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>{% block title %}Dove Fitness Bar{% endblock %}</title>
+        {% block stylesheets %}
+            <link rel="stylesheet" href="build/css/style.css" />
+            <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+		{% endblock %}
+
+        <!--[if lt IE 9]>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+        <![endif]-->
     </head>
     <body>
+
+        <header class="{% block header_class %}Home{% endblock %}">
+
+            <div class="logo center">
+                <a href="/">
+                    <img srcset="https://dovefitnessbar.s3.amazonaws.com/images/o/logo.png 1x,https://dovefitnessbar.s3.amazonaws.com/images/o/logo-2x.png 2x" src="https://dovefitnessbar.s3.amazonaws.com/images/o/logo.png" alt="Dove Fitness Bar Logo"></a>
+            </div>
+
+            {% block nav %}
+            <nav class="center py1">
+                <a href="/"><i class="fa fa-home"></i> Home</a>
+                <a href="/benefits.html"><i class="fa fa-dumbbell"></i> Benefits</a>
+                <a href="/buy.html"><i class="fa fa-shopping-cart"></i> Preorder</a>
+            </nav>
+            {% endblock %}
+
+            <div class="content" data-aos="fade-down">
+                {% block header_content %}{% endblock %}
+            </div>
+
+            <div class="center"><i class="fa fa-angle-down fa-2x"></i></div>
+
+        </header>
+
         {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+
+        {% block footer %}
+		{{ include('partials/footer.html.twig') }}
+        {% endblock %}
+
+        {% block javascripts %}
+            <script src="build/js/script.js"></script>
+        {% endblock %}
     </body>
 </html>
+{% endautoescape %}
