--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,7 +21,7 @@
 
             <div class="logo center">
                 <a href="/">
-                    <img srcset="https://dovefitnessbar.s3.amazonaws.com/images/o/logo.png 1x,https://dovefitnessbar.s3.amazonaws.com/images/o/logo-2x.png 2x" src="https://dovefitnessbar.s3.amazonaws.com/images/o/logo.png" alt="Dove Fitness Bar Logo"></a>
+                    <img srcset="https://d156gn6fhhgphw.cloudfront.net/images/o/logo.png 1x,https://d156gn6fhhgphw.cloudfront.net/images/o/logo-2x.png 2x" src="https://d156gn6fhhgphw.cloudfront.net/images/o/logo.png" alt="Dove Fitness Bar Logo"></a>
             </div>
 
             {% block nav %}
