--- a/templates/page/benefits.html.twig
+++ b/templates/page/benefits.html.twig
@@ -28,7 +28,7 @@
 
 					<!--<div class="sm-col-5 right sm-ml2"><img src="https://dove.heraldo.io/wp-content/uploads/2018/06/gymshoot_19.jpg"/></div>-->
 
-					<p class="xs-fullsize" data-aos="flip-right"><img src="https://dovefitnessbar.s3.amazonaws.com/images/o/dove-fitness-bar-balance-one-leg.jpg"/></p>
+					<p class="xs-fullsize" data-aos="flip-right"><img src="https://d156gn6fhhgphw.cloudfront.net/images/o/dove-fitness-bar-balance-one-leg.jpg"/></p>
 
 
 					<p>It is important to understand the the body is a chain. It is made up of the muscular system, nervous system, and skeletal system that creates movement. When any of the links are not functioning correctly, it affects how the other components perform. </p>
@@ -91,14 +91,14 @@
 		<div class="content">
 
 			<div class="clearfix flex flex-wrap mb3">
-				<div class="col-12 sm-col-5 px3 bg-cover xs-hide" style="background-image:url(https://dovefitnessbar.s3.amazonaws.com/images/o/dove-fitness-bar-twist.jpg); background-position: bottom center;" data-aos="flip-right"></div>
+				<div class="col-12 sm-col-5 px3 bg-cover xs-hide" style="background-image:url(https://d156gn6fhhgphw.cloudfront.net/images/o/dove-fitness-bar-twist.jpg); background-position: bottom center;" data-aos="flip-right"></div>
 
 				<div class="col-12 sm-col-7 sm-px3">
 					<h2 data-aos="fade-right">Improve<br> Mobility</h2>
 
 					<hr>
 
-					<p class="sm-hide md-hide lg-hide xs-fullsize" data-aos="flip-right"><img src="https://dovefitnessbar.s3.amazonaws.com/images/o/dove-fitness-bar-twist.jpg" alt=""></p>
+					<p class="sm-hide md-hide lg-hide xs-fullsize" data-aos="flip-right"><img src="https://d156gn6fhhgphw.cloudfront.net/images/o/dove-fitness-bar-twist.jpg" alt=""></p>
 
 					<div data-aos="zoom-in">
 						<p class="lead">Mobility allows the body to move in all ranges of motion without losing your stability.</p>
