--- a/templates/page/index.html.twig
+++ b/templates/page/index.html.twig
@@ -17,7 +17,7 @@
 		<div class="content">
 
 			<div class="clearfix mxn3 flex flex-wrap">
-				<div class="col-12 md-col-5 px3 bg-cover xs-hide sm-hide" style="background-image:url(https://dovefitnessbar.s3.amazonaws.com/images/uo/dove-fitness-bar-corrects-posture.jpg); background-position: bottom center;"  data-aos="flip-right"></div>
+				<div class="col-12 md-col-5 px3 bg-cover xs-hide sm-hide" style="background-image:url(https://d156gn6fhhgphw.cloudfront.net/images/uo/dove-fitness-bar-corrects-posture.jpg); background-position: bottom center;"  data-aos="flip-right"></div>
 
 				<div class="col-12 md-col-7 px3">
 					<h2 data-aos="zoom-in">
@@ -27,7 +27,7 @@
 
 					<hr>
 
-					<p class="md-hide lg-hide xs-fullsize" data-aos="flip-right"><img src="https://dovefitnessbar.s3.amazonaws.com/images/uo/dove-fitness-bar-corrects-posture.jpg" /></p>
+					<p class="md-hide lg-hide xs-fullsize" data-aos="flip-right"><img src="https://d156gn6fhhgphw.cloudfront.net/images/uo/dove-fitness-bar-corrects-posture.jpg" /></p>
 
 					<div data-aos="zoom-in">
 						<p class="lead">The Dove Fitness Bar is the perfect workout tool for the people who want better posture, relief from shoulder pain and injury and realignment of the shoulder blade.</p>
@@ -62,7 +62,7 @@
 
 					<hr>
 
-					<p class="md-hide lg-hide xs-fullsize" data-aos="flip-right"><img src="https://dovefitnessbar.s3.amazonaws.com/images/uo/dove-fitness-bar-women-overhead.jpg" /></p>
+					<p class="md-hide lg-hide xs-fullsize" data-aos="flip-right"><img src="https://d156gn6fhhgphw.cloudfront.net/images/uo/dove-fitness-bar-women-overhead.jpg" /></p>
 
 					<div data-aos="zoom-in">
 						<p class="lead">When two muscles are at incorrect lengths and movement of a joint is limited, these balances alter the way we move.</p>
@@ -72,7 +72,7 @@
 					</div>
 				</div>
 
-				<div class="sm-col md-col-5 px3 bg-cover xs-hide sm-hide" style="background-image:url(https://dovefitnessbar.s3.amazonaws.com/images/uo/dove-fitness-bar-women-overhead.jpg)" data-aos="flip-left"></div>
+				<div class="sm-col md-col-5 px3 bg-cover xs-hide sm-hide" style="background-image:url(https://d156gn6fhhgphw.cloudfront.net/images/uo/dove-fitness-bar-women-overhead.jpg)" data-aos="flip-left"></div>
 
 			</div>
 
